--- a/01-springboot-spring-mvc-security-default/src/main/resources/templates/plain-login.html
+++ b/01-springboot-spring-mvc-security-default/src/main/resources/templates/plain-login.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Custom Login Page</title>
+    <style>
+        .failed{
+            color: red;
+        }
+    </style>
 </head>
 <body>
 <h3>My Custom Login Page</h3>
 
 <form action="#" th:action = "@{/authenticateTheUser}" method="post">
+<!-- Code to check for login error-->
 
+    <div th:if="${param.error}">
+        <i class="failed">Can't Login , invalid username/password.</i>
+    </div>
   <p>
     User Name : <input type="text" name="username"/>
   </p>
