--- a/01-springboot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/01-springboot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>HomePage </title>
@@ -7,6 +7,14 @@
 <body>
 <h2>Home Page HELLO!!!!!!!! </h2>
 <hr>
-Welcome to our home page!!!
+<p>
+    Welcome to our home page!!!
+</p>
+
+<!--Logout Page -->
+
+<form action = "#" th:action="@{/logout}" method="post">
+    <input type="submit" value="Logout"/>
+</form>
 </body>
 </html>
