--- a/01-springboot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/01-springboot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>HomePage </title>
 </head>
 <body>
+
+
 <h2>Home Page HELLO!!!!!!!! </h2>
 <hr>
 <p>
     Welcome to our home page!!!
+</p>
+
+<hr>
+
+<!--Display username and role-->
+<p>
+
+    User :<span sec:authentication="principal.username"></span>
+    <br><br>
+    Role(s) : <span sec:authentication="principal.authorities"></span>
+
 </p>
 
 <!--Logout Page -->
