Show personalised messages to managers

--- a/01-springboot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/01-springboot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -25,6 +25,16 @@
 
 </p>
 
+<hr>
+<!--Add link to a point to /leaders ... this is for managers-->
+
+<p>
+    <a th:href="@{/leaders}">Leadership Meeting</a>
+    (only for managers)
+</p>
+
+<hr>
+
 <!--Logout Page -->
 
 <form action = "#" th:action="@{/logout}" method="post">
