--- a/01-springboot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/01-springboot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -33,6 +33,14 @@
     (only for managers)
 </p>
 
+<!--Add a link to point to systems ....this is only for admins-->
+
+<p>
+    <a th:href="@{/systems}">IT Systems Meeting</a>
+    (only for Admins)
+</p>
+
+
 <hr>
 
 <!--Logout Page -->
